deploy/kustomize/base/network-policies/misp-mariadb.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-misp-mariadb
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: misp
      app.kubernetes.io/component: mariadb
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: misp
              app.kubernetes.io/component: core
      ports:
        - port: 3306
          protocol: TCP
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
      ports:
        - port: 53
          protocol: UDP
        - port: 53
          protocol: TCP
